# blackmagic-espidf

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  frogfs_config.yaml  package-lock.json  sdkconfig  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.old
.github/workflows/: build-and-upload.yml  build-nightly-blackmagic.yml  build-pr.yml  build.yml
components/: esphttpdconfig.mk
components/blackmagic/: CMakeLists.txt  blackmagic.ld  component.mk  esp32_spi.c  esp32_spi.h  exception.c  exception.h  gdb_if.h  general.h  jtagtap.c  jtagtap.c.off  swdptap-gpio.c  swdptap-ulp.c  swdptap.c  swdptap.c.off  traceswo.c  traceswo.h
components/uhci_driver/: CMakeLists.txt  component.mk
components/uhci_driver/uhci/: uhci.c  uhci_hal.c
components/uhci_driver/uhci/uhci/: uhci.h  uhci_hal.h  uhci_ll.h  uhci_types.h
html/: code.js  debug.html  espfs.paths  index.html  index.js  rtt.html  status.html  wifi.html
html/flash/: index.html
images/: farpatch-gdb.cast  logo-pixel-16x16.afphoto  logo-pixel-32x32.afphoto
main/: CBUF.h  CMakeLists.txt  Kconfig.projbuild  adc.c  component.mk  gdb_if.c  gdb_if.cpp  gdb_if.hpp  gdb_main.cpp  gdb_packet.cpp  hashmap.cpp  hashmap.h  http.c  http.h  ota-tftp.c  ota-tftp.h  partitions-4MB.csv  partitions-8MB.csv  partitions.csv  platform.c  rtt.c  rtt_if.c  tinyprintf.c  tinyprintf.h  uart.c  uart.h  websocket.c  websocket.h  wifi.c  wifi.h  wifi_reset_idf4.c  wifi_reset_idf5.c
main/gprof/: gmon.c  profil.c
main/include/: platform.h  version.h.in
